--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -278,6 +278,21 @@
         </div>
     </div>
     {% endif %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-gear display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Preferences{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Customize your interface settings{% endtrans %}</p>
+                <a href="/user/preferences" class="btn btn-light btn-sm mt-2" data-testid="user-preferences-link">
+                    <span class="d-none d-lg-inline">{% trans %}User preferences{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}Preferences{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
     {% if permissions['user_view_others'] or permissions['user_edit_others'] or permissions['user_add_new'] or permissions['user_is_ueberuser'] %}
     <div class="col mb-1 card-item">
         <div class="card h-100 shadow-sm">
