--- a/templates/default/list_log_users.html
+++ b/templates/default/list_log_users.html
@@ -45,18 +45,18 @@
                     {% if iface_edit_show_id is defined and iface_edit_show_id %}
                     <th>{% trans %}Id{% endtrans %}</th>
                     {% endif %}
-                    <th>{% trans %}Event{% endtrans %}</th>
                     <th>{% trans %}Created at{% endtrans %}</th>
+                    <th>{% trans %}Event{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for row in data %}
                 <tr>
                     {% if iface_edit_show_id is defined and iface_edit_show_id %}
-                    <td>{{ row['id'] }}</td>
+                    <td class="log-id-cell">{{ row['id'] }}</td>
                     {% endif %}
-                    <td>{{ row['event'] }}</td>
-                    <td><i class="bi bi-clock me-1 text-muted small"></i>{{ row['created_at'] }}</td>
+                    <td class="log-timestamp-cell">{{ row['created_at'] }}</td>
+                    <td class="log-event-cell">{{ row['event'] }}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
