--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -196,7 +196,7 @@
                     </li>
                     {% endif %}
 
-                    {% if perm_zone_master_add %}
+                    {% if perm_zone_templ_add or perm_zone_templ_edit %}
                     <!-- Templates -->
                     <li class="nav-item">
                         <div class="nav-section-header">
