--- a/templates/emails/password-reset.txt.twig
+++ b/templates/emails/password-reset.txt.twig
@@ -1,3 +1,6 @@
+{% extends "base.txt.twig" %}
+
+{% block content %}
 {{ greeting }}
 
 We received a request to reset your password. If you made this request, please copy and paste the link below into your browser to reset your password:
@@ -7,6 +10,4 @@ We received a request to reset your password. If you made this request, please c
 This link will expire in {{ expireMinutes }} minutes.
 
 If you did not request a password reset, please ignore this email. Your password will remain unchanged.
-
----
-This is an automated message from {{ appName }}. Please do not reply to this email.
+{% endblock %}
