fix(dns): use consistent FQDN handling across record creation flows, closes #814

--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -475,7 +475,7 @@
             {% if iface_edit_show_id %}
             <td></td>
             {% endif %}
-            <td colspan="7"><textarea class="form-control form-control-sm" rows="5" cols="80" name="comment">{{ zone_comment }}</textarea>
+            <td colspan="7"><textarea class="form-control form-control-sm" rows="5" cols="80" name="zone_comment">{{ zone_comment }}</textarea>
             </td>
             <td colspan="2">
                 {% if perm_edit != "none" %}
